<resources>
    <string name="app_name">UnOrientation</string>
    <string name="adresse">Address</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="fullname">Nom</string>
    <string name="bac">Bac</string>
    <string name="moyennebac">Moyenne Bac</string>
    <string name="code_agence">Agency code</string>
    <string name="dont_have_account">Vous n\'avez pas un compte? Inscrivez vous maintenant...</string>
    <string name="have_account">Vous avez un compte? Connectez vous...</string>
    <string name="error_incorrect_password_msg">Veuillez ressayer</string>
    <string name="error_connection">Erreur de connexion</string>

    <string name="login">SE CONNECTER</string>
    <string name="register">S\'INSCRIRE</string>
    <string name="login_word">Login</string>
    <string name="img_description">Description</string>
    <string name="error_incorrect_password">Wrong password</string>

    <string name="m1">January</string>
    <string name="m2">February</string>
    <string name="m3">March</string>
    <string name="m4">April</string>
    <string name="m5">May</string>
    <string name="m6">June</string>
    <string name="m7">July</string>
    <string name="m8">August</string>
    <string name="m9">September</string>
    <string name="m10">October</string>
    <string name="m11">November</string>
    <string name="m12">December</string>

    <string name="empty" />
    <string name="ok">OK</string>
    <string name="required_fields">Veuillez remplir tous les champ</string>
    <string name="moy_valid">Veuillez saisir une moyenne valide</string>
    <string name="username_valid">Le username dois contenir au moins 3 lettres</string>
    <string name="password_valid">Le mot de passe dois contenir au moins 4 lettres</string>

    <string name="dialog_action_yes">Oui</string>
    <string name="dialog_action_no">No</string>
    <string name="sm1">JAN</string>
    <string name="sm2">FEB</string>
    <string name="sm3">MAR</string>
    <string name="sm4">APR</string>
    <string name="sm5">MAY</string>
    <string name="sm6">JUN</string>
    <string name="sm7">JUL</string>
    <string name="sm8">AUG</string>
    <string name="sm9">SEP</string>
    <string name="sm10">OCT</string>
    <string name="sm11">NOV</string>
    <string name="sm12">DEC</string>


    <string name="home">Home</string>
    <string name="missions">Missions</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="logout">Se déconnecter</string>
    <string name="menu_description">Select your theme</string>
    <string name="news">News</string>
    <string name="quiz">Quiz</string>
    <string name="nbrOffres">Nombre des offres</string>
    <string name="spinoffOffres">Echantillon des offres</string>
    <string name="jobstats">Statistiques des jobs</string>
    <string name="guide">Guide</string>
    <string name="historique">Historique</string>
    <string name="expense_report">Expense report</string>
    <string name="leaves">Leaves</string>
    <string name="guideorientation">Guide d\'orientation</string>
    <string name="result">Résultat</string>
    <string name="history">Historique</string>
    <string name="stats">Stats</string>
    <string name="formresult">Le résultat de votre quiz</string>
    <string name="keyword">Mot clé :</string>
    <string name="salary_advance">Salary Advance</string>
    <string name="profile">"Mon profil</string>
    <string name="cra">CRA</string>
    <string name="chat">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
