<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".pokmy.login.LoginActivity"
        tools:showIn="@layout/activity_login"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/loginfond" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="283dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mdpoublie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.56" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/logopokmy"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintWidth_percent="0.5" />


        <EditText



            android:id="@+id/loginEt"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/edit_text_underlined"
            android:drawablePadding="23dp"
            android:drawableStart="@drawable/ic_login_et"
            android:ems="10"
            android:fontFamily="@font/comfortaalight"
            android:hint="@string/login_word"
            android:inputType="text"
            android:paddingEnd="15dp"
            android:paddingStart="24dp"
            android:textColor="@color/login_et_text_color"
            android:textColorHint="@color/grispokmy"
            android:drawableTint="@color/login_et_text_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/edit_text_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline16"
            app:layout_constraintWidth_percent="0.78" />


        <EditText
            android:id="@+id/passwordEt"


            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_password_et"
            android:drawablePadding="22dp"
            android:background="@drawable/edit_text_underlined"
            android:ems="10"
            android:fontFamily="@font/comfortaalight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:paddingEnd="15dp"
            android:textColor="@color/login_et_text_color"
            android:textColorHint="@color/grispokmy"
            android:textCursorDrawable="@null"
            android:drawableTint="@color/login_et_text_color"
            android:textSize="@dimen/edit_text_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEt"
            app:layout_constraintWidth_percent="0.78" />

        <EditText
            android:id="@+id/nomEt"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_password_et"
            android:drawablePadding="22dp"
            android:background="@drawable/edit_text_underlined"
            android:ems="10"
            android:fontFamily="@font/comfortaalight"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="15dp"
            android:textColor="@color/login_et_text_color"
            android:textColorHint="@color/grispokmy"
            android:textCursorDrawable="@null"
            android:drawableTint="@color/login_et_text_color"
            android:textSize="@dimen/edit_text_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEt"
            app:layout_constraintWidth_percent="0.78" />




        <Button
            android:id="@+id/login_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/login_btn"
            android:backgroundTint="@color/login_btn"
            android:fontFamily="@font/comfortaabold"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomEt"
            app:layout_constraintWidth_percent="0.78" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>